# Kattis

./: Readme.md
counting_triangles/: .gitignore  CMakeLists.txt  Readme.md  aux.cpp  aux.h  class_intersectionList.cpp  class_intersectionList.h  class_line.cpp  class_line.h  io.cpp  io.h  main.cpp  test_cmake_catch.cpp  test_coordinate.cpp  test_countTriangles.cpp  test_intersect.cpp  test_io.cpp  test_line.cpp
